<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp">
        <LinearLayout
            android:id="@+id/testLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="300dp"
            android:gravity="center">

            <!-- SYSTEM KEYBOARDS -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/labelMargin"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold"
                android:text="@string/systemKeyboardLabel"/>

            <EditText
                android:layout_width="@dimen/fieldWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:maxLength="20"
                android:inputType="number"
                android:hint="@string/systemNumber" />

            <EditText
                android:layout_width="@dimen/fieldWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:maxLength="20"
                android:inputType="numberDecimal"
                android:hint="@string/systemNumberDecimal" />

            <EditText
                android:layout_width="@dimen/fieldWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldMarginBottom"
                android:maxLength="50"
                android:inputType="text"
                android:hint="@string/systemQwerty" />


            <!-- CUSTOM KEYBOARDS -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/labelMargin"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold"
                android:text="@string/customKeyboardAndFieldsLabel"/>

            <LinearLayout
                android:id="@+id/customFieldWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Add custom fields dynamically -->
            </LinearLayout>

            <!-- SWITCH ACTIVITIES BUTTON -->
            <Button
                android:id="@+id/switchActivitiesButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:text="@string/toMainButtonText"/>
        </LinearLayout>
    </ScrollView>

    <com.donbrody.customkeyboard.components.keyboard.CustomKeyboardView
        android:id="@+id/customKeyboardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>